tests/requests/invalid/004.py
from restkit.http.errors import InvalidHTTPVersion
request = InvalidHTTPVersion